syntax = "proto3";
import "nanopb.proto";

message Header {
  uint32 version = 1;
  bytes  id = 2 [(nanopb).max_size = 64];
  uint32 seq_no = 3;
  uint64 tv_sec = 4;
  uint32 tv_usec = 5;
}

message SystemVoltage {
  float vbat = 1;
  float vsol = 2;
  float vsec = 3;
  bool  vbat_ok = 4;
}

message ColorCounts {
  uint32 red = 1;
  uint32 green = 2;
  uint32 blue = 3;
  uint32 clear = 4;
}

message ThreadInfo {
  uint32 rloc16 = 1;
  bytes  ext_addr = 2 [(nanopb).max_size = 16];
  uint32 parent_avg_rssi = 3;
  uint32 parent_last_rssi = 4;
}

message SystemData {
  string discovery = 2 [(nanopb).max_size = 64];
  ThreadInfo thread_info = 3;
  string version = 4 [(nanopb).max_size = 64];
}

message SensorData {
  float temperature_c = 1;
  float pressure_mbar = 2;
  float humidity_percent = 3;
  SystemVoltage voltage = 4;
  float light_color_cct_k = 5;
  ColorCounts light_color_counts = 6;
  float light_lux = 7;
  bool motion = 8;
}

message PermamoteMessage {
  Header header = 1;

  SensorData sensor_data = 2;
  SystemData system_data = 3;
}
